KYLIN-894 move spark related to seperate module

--- a/pom.xml
+++ b/pom.xml
@@ -569,6 +569,7 @@
         <module>jdbc</module>
         <module>invertedindex</module>
         <module>streaming</module>
+        <module>spark</module>
     </modules>
 
     <profiles>
