--- a/website/_config.yml
+++ b/website/_config.yml
@@ -20,7 +20,7 @@ title: Apache Kylin
 email: dev@kylin.incubator.apache.org
 description: Apache Kylin Home
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://127.0.0.1" # the base hostname & protocol for your site
+url: "http://kylin.incubator.apache.org" # the base hostname & protocol for your site
 twitter_username: ApacheKylin
 
 encoding: UTF-8
