KYLIN-883 Using configurable option for Hive intermediate tables

--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -36,6 +36,9 @@ kylin.job.concurrent.max.limit=10
 # Time interval to check hadoop job status
 kylin.job.yarn.app.rest.check.interval.seconds=10
 
+# Hive database name for putting the intermediate flat tables
+kylin.job.hive.database.for.intermediatetable=default
+
 # Whether calculate cube in mem in each mapper;
 kylin.job.cubing.inMem=true
 
