KYLIN-909 Adapt GTStore to hbase endpoint
KYLIN-909: stage 2

KYLIN-909 stage 3

KYLIN-909 use kryo to serialized request

KYLIN-909 use kryo to serialized request 2

coding

port endpoint to local

test endpoint

update DeployCP

add shade artifact

asm conflict

shade

--- a/core-common/pom.xml
+++ b/core-common/pom.xml
@@ -17,7 +17,8 @@
  limitations under the License.
 -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>kylin-core-common</artifactId>
@@ -34,7 +35,7 @@
     </properties>
 
     <dependencies>
-    	<!-- Basic Utilities -->
+        <!-- Basic Utilities -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
@@ -83,8 +84,9 @@
             <groupId>com.ning</groupId>
             <artifactId>compress-lzf</artifactId>
         </dependency>
+      
 
-		<!-- Logging -->
+        <!-- Logging -->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -108,6 +110,6 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-        
+
     </dependencies>
 </project>
