--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
         <commons-email.version>1.1</commons-email.version>
 
         <!-- Spark -->
-        <spark.version>1.4.0</spark.version>
+        <spark.version>1.4.1</spark.version>
 
 
         <!-- Utility -->
@@ -585,6 +585,7 @@
         <module>core-storage</module>
         <module>engine-mr</module>
         <module>engine-streaming</module>
+        <module>engine-spark</module>
         <module>source-hive</module>
         <module>source-kafka</module>
         <module>storage-hbase</module>
@@ -595,7 +596,6 @@
         <module>jdbc</module>
         <module>invertedindex</module>
         <module>streaming</module>
-        <module>spark</module>
         <module>assembly</module>
     </modules>
 
