--- a/website/_data/docs.yml
+++ b/website/_data/docs.yml
@@ -1,3 +1,20 @@
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to you under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
+# Docs menu items, for English one, docs-cn.yml is for Chinese one
+# The docs menu is constructed in docs_nav.html with these data
 - title: Getting Started
   docs:
   - index
@@ -34,21 +51,3 @@
   - howto/howto_upgrade
   - howto/howto_docs
   - howto/howto_release
-
-
-- title: Development
-  docs:
-  - development/dev_env
-  - development/metadata_store
-  - development/new_metadata
-  - development/rest_api
-  - development/build_api
-  - development/javascript_api
-  - development/web_tech
-  - development/test_minicluster
-  
-
-
-- title: Meta
-  docs:
-  - history
