KYLIN-907 Correct some wrontly classified howto/dev articles

--- a/website/_data/development.yml
+++ b/website/_data/development.yml
@@ -20,11 +20,11 @@
   dev:
   - index
   - dev_env
-  - metadata_store
+  - howto_contribute
+  - howto_docs
+  - howto_package
+  - howto_release
   - new_metadata
-  - rest_api
-  - build_api
-  - javascript_api
   - web_tech
   - test_minicluster
   
