correct my Chinese name

--- a/website/_data/contributors.yml
+++ b/website/_data/contributors.yml
@@ -65,7 +65,7 @@
   org: 
   role: Champion
   avatar: https://www.mapr.com/sites/default/files/otherpageimages/ted-circle-80.png
-- name: Shaofeng Shi (史少峰) 
+- name: Shaofeng Shi (史少锋) 
   apacheId: shaofengshi
   githubId: shaofengshi
   org: 
