--- a/examples/test_case_data/minicluster/kylin.properties
+++ b/examples/test_case_data/minicluster/kylin.properties
@@ -27,7 +27,7 @@ kylin.metadata.url=kylin_metadata@hbase:minicluster:/hbase-unsecure
 kylin.storage.url=hbase:minicluster:/hbase-unsecure
 
 # Temp folder in hdfs, make sure user has the right access to the hdfs directory
-kylin.hdfs.working.dir=/kylin
+kylin.hdfs.working.dir=/tmp
 
 kylin.job.mapreduce.default.reduce.input.mb=500
 
