update doc: add document on kylin server modes

--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -31,6 +31,8 @@ kylin.hdfs.working.dir=/kylin
 
 kylin.job.mapreduce.default.reduce.input.mb=500
 
+kylin.server.mode=all
+
 # If true, job engine will not assume that hadoop CLI reside on the same server as it self
 # you will have to specify kylin.job.remote.cli.hostname, kylin.job.remote.cli.username and kylin.job.remote.cli.password
 kylin.job.run.as.remote.cmd=false
