--- a/website/_data/docs.yml
+++ b/website/_data/docs.yml
@@ -47,6 +47,7 @@
   - howto/howto_build_cube_with_restapi
   - howto/howto_use_restapi_in_js
   - howto/howto_use_restapi
+  - howto/howto_optimize_cubes
   - howto/howto_backup_metadata
   - howto/howto_backup_hbase
   - howto/howto_jdbc
