--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <commons-httpclient.version>3.1</commons-httpclient.version>
         <commons-collections4.version>4.0</commons-collections4.version>
         <commons-email.version>1.1</commons-email.version>
+        <commons-math3.version>3.6-SNAPSHOT</commons-math3.version>
 
         <!-- Spark -->
         <spark.version>1.3.0</spark.version>
@@ -384,6 +385,11 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-email</artifactId>
                 <version>${commons-email.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-math3</artifactId>
+                <version>${commons-math3.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.guava</groupId>
