KYLIN-954 update pom for release

--- a/pom.xml
+++ b/pom.xml
@@ -819,7 +819,7 @@
                                 <!-- Kylin's website content -->
                                 <exclude>**/.sass-cache/**</exclude>
 
-                                <exclude>docs/website/**</exclude>
+                                <exclude>website/**</exclude>
 
                                 <!-- tomcat package -->
                                 <exclude>tomcat/**</exclude>
