--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -16,6 +16,8 @@ kylin.job.mapreduce.default.reduce.input.mb=500
 
 # If true, job engine will not assume that hadoop CLI reside on the same server as it self
 # you will have to specify kylin.job.remote.cli.hostname, kylin.job.remote.cli.username and kylin.job.remote.cli.password
+# It should not be set to "true" unless you're NOT running Kylin.sh on a hadoop client machine 
+# (Thus kylin instance has to ssh to another real hadoop client machine to execute hbase,hive,hadoop commands)
 kylin.job.run.as.remote.cmd=false
 
 # Only necessary when kylin.job.run.as.remote.cmd=true
