--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -60,6 +60,9 @@ kylin.job.yarn.app.rest.check.interval.seconds=10
 # Hive database name for putting the intermediate flat tables
 kylin.job.hive.database.for.intermediatetable=default
 
+#default compression codec for htable,snappy,lzo,gzip,lz4
+kylin.hbase.default.compression.codec=snappy
+
 ## Config for Restful APP ##
 # database connection settings:
 ldap.server=
