KYLIN-956 allow users to configure hbase compression algorithm in kylin.properties

--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -44,6 +44,9 @@ kylin.job.hive.database.for.intermediatetable=default
 # Whether calculate cube in mem in each mapper;
 kylin.job.cubing.inMem=true
 
+#default compression codec for htable,snappy,lzo,gzip,lz4
+kylin.hbase.default.compression.codec=snappy
+
 #the percentage of the sampling, default 25%
 kylin.job.cubing.inMem.sampling.percent=25
 
