--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -48,6 +48,9 @@ kylin.job.hbase.region.cut.large=50
 # Time interval to check hadoop job status
 kylin.job.yarn.app.rest.check.interval.seconds=10
 
+#default compression codec for htable,snappy,lzo,gzip,lz4
+kylin.hbase.default.compression.codec=snappy
+
 ## Config for Restful APP ##
 # database connection settings:
 ldap.server=
