KYLIN-957 Support HBase in a separate cluster

--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -29,6 +29,14 @@ kylin.storage.url=hbase
 # Temp folder in hdfs, make sure user has the right access to the hdfs directory
 kylin.hdfs.working.dir=/kylin
 
+# Hadoop Cluster FileSystem, which serving hive and mapreduce, format as hdfs://hadoop-cluster/
+# leave empty if using default fs configured by local core-site.xml
+kylin.hadoop.cluster.fs=
+
+# HBase Cluster FileSystem, which serving hbase, format as hdfs://hbase-cluster/
+# leave empty if hbase running on same cluster with hive and mapreduce
+kylin.hbase.cluster.fs=
+
 kylin.job.mapreduce.default.reduce.input.mb=500
 
 kylin.server.mode=all
