--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -61,7 +61,7 @@ kylin.job.yarn.app.rest.check.interval.seconds=10
 kylin.job.hive.database.for.intermediatetable=default
 
 #default compression codec for htable,snappy,lzo,gzip,lz4
-kylin.hbase.default.compression.codec=snappy
+#kylin.hbase.default.compression.codec=snappy
 
 ## Config for Restful APP ##
 # database connection settings:
