--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -29,11 +29,11 @@ kylin.storage.url=hbase
 # Temp folder in hdfs, make sure user has the right access to the hdfs directory
 kylin.hdfs.working.dir=/kylin
 
-# Hadoop Cluster FileSystem, which serving hive and mapreduce, format as hdfs://hadoop-cluster/
+# Hadoop Cluster FileSystem, which serving hive and mapreduce, format as hdfs://hadoop-cluster/ (end with /)
 # leave empty if using default fs configured by local core-site.xml
 kylin.hadoop.cluster.fs=
 
-# HBase Cluster FileSystem, which serving hbase, format as hdfs://hbase-cluster/
+# HBase Cluster FileSystem, which serving hbase, format as hdfs://hbase-cluster/ (end with /)
 # leave empty if hbase running on same cluster with hive and mapreduce
 kylin.hbase.cluster.fs=
 
