--- a/website/_data/contributors.yml
+++ b/website/_data/contributors.yml
@@ -27,27 +27,27 @@
 - name: Hongbin Ma (马洪宾)
   apacheId: mahongbin
   githubId: binmahone
-  org: 
+  org: eBay
   role: PMC
 - name: Jason Zhong (仲俭)
   apacheId: zhongjian
   githubId: janzhongi
-  org: 
+  org: eBay
   role: PMC
 - name: Julian Hyde
   apacheId: jhyde
   githubId: julianhyde
-  org: 
+  org: Hortonworks
   role: Mentor
 - name: Luke Han (韩卿) 
   apacheId: lukehan
   githubId: lukehan
-  org: 
+  org: eBay
   role: PMC
 - name: Owen O'Malley
   apacheId: omalley
   githubId: omalley
-  org: 
+  org: Hortonworks
   role: Mentor
 - name: P. Taylor Goetz
   apacheId: ptgoetz
@@ -57,34 +57,43 @@
 - name: Qianhao Zhou (周千昊)
   apacheId: qhzhou
   githubId: qhzhou
-  org: 
+  org: eBay
   role: PMC
 - name: Ted Dunning
   apacheId: tdunning
   githubId: tdunning
-  org: 
+  org: MapR
   role: Champion
   avatar: https://www.mapr.com/sites/default/files/otherpageimages/ted-circle-80.png
 - name: Shaofeng Shi (史少锋) 
   apacheId: shaofengshi
   githubId: shaofengshi
-  org: 
+  org: eBay
   role: PMC
 - name: Xiaodong Duo (朵晓东)
   apacheId: xduo
   githubId: xduo
-  org: 
+  org: Alipay
   role: PMC
 - name: Xu Jiang (蒋旭)
   apacheId: jiangxu
   githubId: jiangxuchina
-  org: 
+  org: Alibaba
   role: PMC
 - name: Yang Li (李扬)
   apacheId: liyang
   githubId: liyang-gmt8
-  org: 
+  org: eBay
   role: PMC
-
+- name: Dayue Gao (高大月)
+  apacheId: 
+  githubId: 
+  org: Meituan
+  role: committer
+- name: Hua Huang (黄桦)
+  apacheId: 
+  githubId: superhua
+  org: MiningLAMP
+  role: committer 
 
 
