KYLIN-965 Allow user to configure the region split size for cube

--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -51,10 +51,10 @@ kylin.hbase.default.compression.codec=snappy
 kylin.job.cubing.inMem.sampling.percent=25
 
 # The cut size for hbase region, in GB.
-# E.g, for cube whose capacity be marked as "SMALL", split region per 5GB by default
-kylin.job.hbase.region.cut.small=5
-kylin.job.hbase.region.cut.medium=10
-kylin.job.hbase.region.cut.large=50
+# E.g, for cube whose capacity be marked as "SMALL", split region per 10GB by default
+kylin.hbase.region.cut.small=10
+kylin.hbase.region.cut.medium=20
+kylin.hbase.region.cut.large=100
 
 ## Config for Restful APP ##
 # database connection settings:
