--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -40,10 +40,10 @@ kylin.job.cubing.inMem=true
 kylin.job.cubing.inMem.sampling.percent=25
 
 # The cut size for hbase region, in GB.
-# E.g, for cube whose capacity be marked as "SMALL", split region per 5GB by default
-kylin.job.hbase.region.cut.small=5
-kylin.job.hbase.region.cut.medium=10
-kylin.job.hbase.region.cut.large=50
+# E.g, for cube whose capacity be marked as "SMALL", split region per 10GB by default
+kylin.hbase.region.cut.small=10
+kylin.hbase.region.cut.medium=20
+kylin.hbase.region.cut.large=100
 
 # Time interval to check hadoop job status
 kylin.job.yarn.app.rest.check.interval.seconds=10
