增加使用kerberos认证的方式获取作业执行状态，可配置
Signed-off-by: hzfengyu@corp.netease.com <hzfengyu@corp.netease.com>

--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -64,6 +64,9 @@ kylin.job.concurrent.max.limit=10
 # Time interval to check hadoop job status
 kylin.job.yarn.app.rest.check.interval.seconds=10
 
+#if you should getting job status from RM with kerberos, set it true..
+kylin.job.status.with.kerberos=false
+
 # Hive database name for putting the intermediate flat tables
 kylin.job.hive.database.for.intermediatetable=default
 
@@ -142,3 +145,4 @@ kylin.monitor.ext.log.base.dir = /tmp/kylin_log1,/tmp/kylin_log2
 #will create external hive table to query result csv file
 #will set to kylin_query_log by default if not config here
 kylin.monitor.query.log.parse.result.table = kylin_query_log
+
