KYLIN-742 Route unsupported queries to Hive
Signed-off-by: Li, Yang <yangli9@ebay.com>

--- a/examples/test_case_data/sandbox/kylin.properties
+++ b/examples/test_case_data/sandbox/kylin.properties
@@ -132,5 +132,11 @@ kylin.monitor.ext.log.base.dir = /tmp/kylin_log1,/tmp/kylin_log2
 #will set to kylin_query_log by default if not config here
 kylin.monitor.query.log.parse.result.table = kylin_query_log
 
+##### Config for enabling query rerouting to Hive. Disabled by default. ######
+kylin.route.hive.enabled=false
 
-
+# If query rerouting is enabled, provide the hive configurations
+# Default value for kylin.route.hive.url will be pointing to the embedded server (jdbc:hive2://)
+kylin.route.hive.url=
+kylin.route.hive.username=
+kylin.route.hive.password=
