KYLIN-971, set default value for [kylin.rest.timezone] in kylin.properties

--- a/conf/kylin.properties
+++ b/conf/kylin.properties
@@ -20,6 +20,9 @@
 # List of web servers in use, this enables one web server instance to sync up with other servers.
 kylin.rest.servers=localhost:7070
 
+#set display timezone on UI,format like[GMT+N or GMT-N]
+kylin.rest.timezone=GMT-8
+
 # The metadata store in hbase
 kylin.metadata.url=kylin_metadata@hbase
 
